--- a/McBonaldsMVC/Views/Cliente/Login.cshtml
+++ b/McBonaldsMVC/Views/Cliente/Login.cshtml
@@ -5,16 +5,20 @@
             <div>
                 <label for="email">E-mail</label>
                 <br />
-                <input id="email" type="email" />
+                <input id="email" type="email" name="email" />
             </div>
 
             <div>
                 <label for="senha">Senha</label>
                 <br />
-                <input id="senha" type="password" />
+                <input id="senha" type="password"  name="senha" />
             </div>
 
             <input type="submit" value="Entrar!" />
+
+            <div id="link-cadastro">
+                <a href= '@Url.Action("Index", "Cadastro")' > Quero me me cadastrar!</a>
+            </div>
         </form>
 
     </main>
