--- a/McBonalds MVC/Views/Shared/Erro.cshtml
+++ b/McBonalds MVC/Views/Shared/Erro.cshtml
@@ -1,5 +1,5 @@
-@model McBonaldsMVC.viewM
+@model McBonalds_MVC.ViewModels.RespostaViewModel
 <main>
-    <h2>@ViewData["Action"] error mano deu b.o aq</h2>
+    <h2>@ViewData["Action"] Erro</h2>
     <p>@Model.Mensagem</p>
 </main>
