--- a/McBonalds MVC/Views/Pedido/Index.cshtml
+++ b/McBonalds MVC/Views/Pedido/Index.cshtml
@@ -1,36 +1,36 @@
 @model McBonalds_MVC.ViewModels.PedidoViewModel
 <main>
-        <h2>Pede aí, jovem!</h2>
+        <h2>Pede aí, @Model.NomeUsuario</h2>
         <form method="POST" action='@Url.Action("Registrar","Pedido")'>
             <div>
                 <label for="nome">Nome Completo</label>
                 <br />
-                <input id="nome" type="text" maxlength="20" minlength="3" name="nome"/>
+                <input id="nome" type="text" maxlength="20" minlength="3" value="@Model.Cliente.Nome" name="nome" />
             </div>
 
             <div>
                 <label for="endereco">Endereço</label>
                 <br />
-                <input id="endereco" type="text" maxlength="20" minlength="3" name="endereco"/>
+                <input id="endereco" type="text" maxlength="20" minlength="3" value="@Model.Cliente.Endereco" name="endereco"/>
             </div>
 
             <div>
                 <label for="telefone">Telefone para contato</label>
                 <br />
-                <input id="telefone" type="text" name="telefone" placeholder="11 12345 6789"/>
+                <input id="telefone" type="text" placeholder="11 4002 8922"  value="@Model.Cliente.Telefone" name="telefone"/>
             </div>
 
             <div>
                 <label for="email">E-mail</label>
                 <br />
-                <input id="email" type="email" name="email" maxlength="30" />
+                <input id="email" type="email" name="email"/>
             </div>
 
             </div>
             <div class="double-field">
                 <div>
                     <label for="hamburguer">Hamburguer</label>
-                    <select id="hamburguer" name="hamburguer"required>
+                    <select id="hamburguer" name="hamburguer" required>
                         <option value="" disabled selected>Selecione</option>
                         @foreach (var h in Model.Hamburgueres)
                         {
@@ -44,7 +44,7 @@
                         <option value="" disabled selected>Selecione</option>
                         @foreach (var s in Model.Shakes)
                         {
-                            <option value=@s.Nome>@s.Nome por @s.Preco</option>
+                            <option value="@s.Nome">@s.Nome por @s.Preco</option>
                         }
                     </select>
                 </div>
