--- a/McBonalds MVC/Views/Shared/Erro.cshtml
+++ b/McBonalds MVC/Views/Shared/Erro.cshtml
@@ -1,5 +1,5 @@
 @model McBonalds_MVC.ViewModels.RespostaViewModel
 <main>
-    <h2>@ViewData["Action"] Erro</h2>
-    <p>@Model.Mensagem</p>
+    <h2>@ViewData["Action"] Deu ruim</h2>
+    <P>@Model.Mensagem</P>
 </main>
