--- a/McBonalds MVC/Views/Pedido/Index.cshtml
+++ b/McBonalds MVC/Views/Pedido/Index.cshtml
@@ -5,25 +5,25 @@
             <div>
                 <label for="nome">Nome Completo</label>
                 <br />
-                <input id="nome" type="text" maxlength="20" minlength="3" value="@Model.Cliente.Nome" name="nome" />
+                <input id="nome" type="text" maxlength="20" minlength="3" value ="@Model.Cliente.Nome" name="nome"/>
             </div>
 
             <div>
                 <label for="endereco">Endereço</label>
                 <br />
-                <input id="endereco" type="text" maxlength="20" minlength="3" value="@Model.Cliente.Endereco" name="endereco"/>
+                <input id="endereco" type="text" maxlength="20" minlength="3" value ="@Model.Cliente.Endereco" name="endereco"/>
             </div>
 
             <div>
                 <label for="telefone">Telefone para contato</label>
                 <br />
-                <input id="telefone" type="text" placeholder="11 4002 8922"  value="@Model.Cliente.Telefone" name="telefone"/>
+                <input id="telefone" type="text" placeholder="11 4002 8922" value ="@Model.Cliente.Telefone" name="telefone"/>
             </div>
 
             <div>
                 <label for="email">E-mail</label>
                 <br />
-                <input id="email" type="email" name="email"/>
+                <input id="email" type="email" valeu ="@Model.Cliente.Email" name="email"/>
             </div>
 
             </div>
